day 4 commit